# cpp-sandbox

./: .gitignore  BUILD  CMakeLists.txt  WORKSPACE  autogen.sh  names.txt  out.txt
.cache/clangd/index/: absl.cpp.AD5F30C0260FB8B6.idx  address_is_readable.cc.9EC08980A02E3B7D.idx  arg.cc.0E6CE8233B9FD029.idx  ascii.cc.1D61B488E299765E.idx  bad_any_cast.cc.5AA2FFBBC6270AFC.idx  bad_optional_access.cc.6490BE2611AB21F6.idx  bad_variant_access.cc.1970BD4A5312F380.idx  barrier.cc.E8818D7FC5C486F7.idx  bench.cpp.E72CA085C060FB36.idx  bind.cc.04BF14EE5A721228.idx  blocking_counter.cc.5C5006FC8A8BE91C.idx  btree.cpp.4A6E0B82C95DD66F.idx  cache.cpp.69551F75D39D05AC.idx  cache.cpp.6D46F370960B0974.idx  cache.h.A4BF0EF7D8D89D1C.idx  cache.hpp.908C3B4E76B5FF04.idx  cachecompile.cpp.B1E26B6BEFEAB4E4.idx  charconv.cc.E27039BEFB01EBA9.idx  charconv_bigint.cc.9F799D133EA0958B.idx  charconv_parse.cc.68CF61F1EED94392.idx  chi_square.cc.A5D4D83C55E3AABE.idx  city.cc.113673F1E01C8523.idx  civil_time.cc.E83F1B21D9EB021F.idx  civil_time_detail.cc.0686F1CE3C022C35.idx  clock.cc.21D37A624F179535.idx  commandlineflag.cc.2513235AAB72539B.idx  commandlineflag.cc.BC646293A419BAE4.idx  cord.cc.2B70D44DF2A6F214.idx  cord_internal.cc.B60AA1DB69144A91.idx  cord_rep_ring.cc.78F38C4E894BCAE4.idx  create_thread_identity.cc.93630EF85E4FE41B.idx  cycleclock.cc.FA476E311476D035.idx  demangle.cc.334F09A646C3FC45.idx  discrete_distribution.cc.B696509DB1230EF7.idx  distribution_test_util.cc.6CA7ABDC43F3218D.idx  divide.cpp.7A4D1B8236155FE2.idx  duration.cc.DECE5BDEF9C562A4.idx  elf_mem_image.cc.1F496E70D77D483D.idx  escaping.cc.979E25D92969F628.idx  escaping.cc.A7BA4C5E6614F9FA.idx  (+86 more)
app/: absl.cpp  ballmachine.cpp  bench.cpp  btree.cpp  divide.cpp  hashmap.cpp  inteview.cpp  list.cpp  sort.cpp  strings.cpp  tertiary_func.cpp  vector.cpp
src/: CMakeLists.txt  main.cpp
src/include/: cache.h  cache.hpp  utils.h
src/libs/: cache.cpp  cachecompile.cpp
test/: CMakeLists.txt  cache.cpp
